Fix jumpy state pages

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -11,7 +11,9 @@
   justify-content: center;
 
   .app {
+    flex: 0 1 100%;
     padding: 0 15px;
+    max-width: 1200px;
   }
 
   aside.sidebar {
